--- a/css/app.css
+++ b/css/app.css
@@ -415,6 +415,17 @@ button {
     font-size: 16px;
 }
 
+/* FOOTER */
+.main-footer {
+    background-color: black;
+    color: white;
+}
 
+.main-footer .col {
+    padding: 0;
+    margin: 0;
+}
 
-/* DEBUG */
+.footer-content {
+    justify-content: space-between;
+}
