--- a/css/app.css
+++ b/css/app.css
@@ -104,7 +104,7 @@ button {
 
 .col {
     padding: 0 25px;
-    margin-bottom: 40px;
+    margin-bottom: 50px;
 }
 
 .col-4 {
@@ -212,10 +212,11 @@ button {
 /* CARD */
 .section .card {
     border: 1px solid black;
+    height: 100%;
 }
 
 .section .card__header {
-    padding: 10px;
+    padding: 12px 0;
     border-bottom: 1px solid black;
     text-align: center;
 }
@@ -225,11 +226,11 @@ button {
 }
 
 .section .card__body {
-    padding: 30px;
+    padding: 24px;
 }
 
 .card__body .card__title {
-    font-size: 24px;
+    font-size: 30px;
     font-weight: 700;
     margin-bottom: 16px;
 }
@@ -251,7 +252,7 @@ button {
 .card__body .card__features .feature {
     display: flex;
     align-items: baseline;
-    gap: 10px;
+    gap: 8px;
     margin-bottom: 20px;
 }
 
