--- a/css/app.css
+++ b/css/app.css
@@ -26,37 +26,53 @@ a {
 button {
     background-color: transparent;
     border: none;
-}
-
-.button {
-    background-color: #0061FF;
-    color: white;
     font-size: 16px;
     padding: 0 15px;
     line-height: 35px;
 }
 
-.button-white {
+button.button-blue {
+    background-color: #0061FF;
+    color: white;
+}
+
+button.button-white {
     background-color: transparent;
     color: black;
 }
 
-.button--blue {
+.button {
     line-height: 45px;
     padding: 0 16px;
+    text-align: center;
+}
+
+.button--blue {
     color: white;
     background-color: #0061FF;
 }
 
+.card .button {
+    line-height: 40px;
+    margin-bottom: 30px;
+}
+
+.col-4 .card .button {
+    width: 100%;
+}
+
+.col-12 .card .button {
+    padding: 0 40px;
+    margin-bottom: 0;
+}
+
 .button--outlined {
-    line-height: 45px;
     color: black;
     background-color: transparent;
     border: 1px solid black;
 }
 
 .button--white {
-    line-height: 45px;
     padding: 0 50px;
     color: black;
     background-color: white;
@@ -105,6 +121,10 @@ button {
 .col {
     padding: 0 25px;
     margin-bottom: 50px;
+}
+
+.col.col-12 {
+    margin-bottom: 0;
 }
 
 .col-4 {
@@ -256,19 +276,12 @@ button {
     margin-bottom: 20px;
 }
 
-.card__body .button--blue {
-    line-height: 40px;
-    width: 100%;
-    text-align: center;
-    margin-bottom: 30px;
-}
-
 .card__link {
     color: #0061FF;
     text-decoration: underline;
 }
 
-.card__body p {
+.col-4 .card__body p {
     margin-bottom: 40px;
 }
 
@@ -290,6 +303,21 @@ button {
 
 .card__body .card__features i.fa-check {
     color: #0061FF;
+}
+
+.card__body .content-primary {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.card__body .content-secondary :first-child {
+    font-weight: 700;
+    margin-bottom: 50px
+}
+
+.col-12 .card__body .content-secondary {
+    width: calc( (100% / 3 ) * 2 );
 }
 
 /* PARTNER */
